[package]
name = "granite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
bytes = "1.6.0"
http = "1.1.0"
pingora = { version = "0.1.1", features = ["lb", "proxy", "cache"] }
serde = "1.0.198"
serde_json = "1.0.116"
